fix: daily weather overlaps with hourly

--- a/Components/App/App.module.css
+++ b/Components/App/App.module.css
@@ -308,7 +308,7 @@
   .components-container-bottom{
     position: relative;
     scale: 0.9;
-    margin-top: -60px;
+    margin-top: -20px;
   }
 
   .sunrise-sunset-wrapper{
